# 207-Summer26-FinalProject-MLModel

./: .gitignore  Chicago_ORD_Data.ipynb  Complied_Flights_Preprocessing_EDA.ipynb  README.md  combine_datasets.ipynb  pyproject.toml
.ipynb_checkpoints/: combine_datasets-checkpoint.ipynb
.virtual_documents/EDA/: SFO_NOAA_EDA_YvonneChook.ipynb
Data_Extraction/: SFO_B6_Departures.csv  SFO_Flights_Extraction_Rosalin.ipynb  SFO_WN_Departures.csv
Data_Extraction/Data/: SFO_F9_Departures.csv  SFO_HA_Departures.csv
Data_Extraction/SFO_NOAA_raw_YvonneChook/: SFO_NOAA_raw_Data_Extraction.ipynb
Data_Extraction/santi/: extract_data.ipynb  extract_weather_data.ipynb
Data_Preprocessing/: Complied_Flights_Preprocessing_EDA.ipynb  DFW_Flights_Prepocessing_EDA_Rosalin.ipynb  SFO_Flights_Preprocessing_EDA_Anushka.ipynb  SFO_Flights_Preprocessing_Rosalin.ipynb  SFO_NOAA_Preprocessing_Santi.ipynb  SFO_NOAA_Preprocessing_YvonneChook.ipynb
Data_Preprocessing/.ipynb_checkpoints/: Complied_Flights_Preprocessing_EDA-checkpoint.ipynb
Data_Preprocessing/santi/: preprocess_data.ipynb  (+1 more)
EDA/: SFO_Flights_EDA_Rosalin.ipynb  SFO_NOAA_EDA_Santi.ipynb  SFO_NOAA_EDA_YvonneChook.ipynb  weather_eda_Santi.ipynb
Merged_EDA/: combine_datasets_eda.ipynb  combine_datasets_final.ipynb  combine_datasets_reference.ipynb
datasets/: ATL_AA_Arrivals.csv  ATL_AA_Departures.csv  ATL_UA_Arrivals.csv  ATL_UA_Departures.csv
rosalin_notebooks/: Flight_DATA_Preprocessing_EDA.ipynb  Rosalin_Lun_A_Predictive_Model_for_US_Airline_Flight_Delays.ipynb
teammates_notebook/: justin_data_cleaning.ipynb
(+9 files in other folders)
